# pyladiescon

./: README.md  manage.py  pyproject.toml
capitulo/: admin.py  apps.py  models.py  schemas.py  views.py
capitulo/migrations/: 0001_initial.py
pyladies/: api.py  asgi.py  settings.py  wsgi.py
